--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <!-- start #demo-1 -->
       <div id="demo-1">
         <div class="container">
-          <h3 class="display-4 mt-5 mb-3">Bootstrap carousel</h3>
+          <h3 class="display-4 mt-5 mb-3">Fluid container with background image</h3>
         </div>
 
         <section class="skillset default mod_skill-123" style="background-image: url(https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-0.3.5&s=8be1c4759337cfe470e1273b461ca615&auto=format&fit=crop&w=1050&q=80)">
@@ -161,7 +161,7 @@
       <!-- start #demo-2 -->
       <div id="demo-2">
         <div class="container">
-          <h3 class="display-4 mt-5 mb-3">Swiper fade effect</h3>
+          <h3 class="display-4 mt-5 mb-3">Alternative layout</h3>
         </div>
 
         <section class="skillset alternative wrapper mod_skill-456">
