--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <!-- ciaoooooo -->
+    <!-- ciaooo 2 --->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SPEDI Skillset - Joomla Module (by SPEDI srl)</title>
